@@ -1,0 +1,2 @@
+[default]
+title=STX Method
